libs/@local/hashql/ast/tests/ui/lowering/import-resolver/generic-argument-absolute-path.jsonc
//@ run: fail
//@ description: Generic arguments in the absolute path should fail
["::math<T>::add", { "#literal": 2 }, { "#literal": 3 }]
//~^ ERROR Remove this generic argument
